# ibxrust

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: sample_code.rs
output/: case_001_MMXCV246042001S.html  case_002_MMXCV246042656S.html  case_003_MMXCV256045220S.html  case_004_MMXCV246042052S.html  case_005_MMXCV246042457S.html  case_006_MMXCV256046361S.html  cases.csv  foreclose-cases.html  mcs.md  page.html
prps/: project_plan.md  projectgoal.md  tasks.md  thoughts.md  version_control.md
src/: config.rs  connection.rs  error.rs  lib.rs  logging.rs  main.rs  trade.rs
tests/: test_phase2_isolated.rs  test_phone_lookup.rs  test_phone_lookup_unit.rs
