[package]
name = "ibxrust"
version = "0.1.0"
edition = "2021"

[dependencies]
ibapi = "1.2.2"
tokio = { version = "1.35", features = ["full"] }
time = "0.3"
colored = "2.1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"